--- a/backend/.env.examle
+++ b/backend/.env.examle
@@ -1,6 +1,7 @@
-PG_USER=
-PG_PASSWORD=
+PG_USER=app_user
+PG_PASSWORD=coding_test_password
 PG_HOST=localhost
 PG_PORT=5432
-PG_DATABASE=
+PG_DATABASE=datatys_db
 SECRET=test-dev-secret
+JWT_SECRET=23452dfsdfv
