--- a/backend/package.json
+++ b/backend/package.json
@@ -21,14 +21,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "nodemon": "^2.0.4",
     "body-parser": "^1.19.0",
     "chai": "^4.2.0",
     "chalk": "^4.1.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^9.0.2",
     "mocha": "^8.1.3",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "nodemon": "^2.0.4",
     "pg": "^7.18.2",
     "sha.js": "^2.4.11",
     "sinon": "^9.0.3"
