--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.1",
+    "react-hook-form": "^7.54.1",
     "react-scripts": "5.0.0"
   },
   "devDependencies": {
